Enable navigation between links and shorten

--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,4 +1,5 @@
 <div id='container'>
+  <a href="#/shorten">Go to shorten</a>
   <!-- <div ngInit='getAll()'></div> -->
   <!-- <div id='signin'>
     <h1>signin</h1>
