--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html ng-app='shortly'>
   <head>
     <meta charset="utf-8" />
@@ -7,6 +7,13 @@
   </head>
   <body>
     <h1>Shortly</h1>
+    <div class='navigation'>
+    <ul>
+      <li><a href='#links' class='index'>All Links</a></li>
+      <li><a href='#shorten' class='create'>Shorten</a></li>
+      <li><a href='#logout' class='logout'>Logout</a></li> 
+    </ul>
+    </div>
 
     <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
     <div ng-view>
